--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "astro": "^5.7.10",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "swiper": "^11.2.6"
   }
 }
