--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "^5.7.10",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "sharp": "^0.34.2",
     "swiper": "^11.2.6"
   }
 }
